<resources>
    <string name="app_name">LoftMoney</string>

    <string name="add_item_hint_name">Название</string>
    <string name="add_item_hint_price">Цена</string>
    <string name="add_item_button">Добавить</string>

    <string name="main_screen_title">Учет бюджета</string>
    <string name="main_tab_expenses">Расходы</string>
    <string name="main_tab_incomes">Доходы</string>
    <string name="main_tab_balance">Баланс</string>

    <string name="auth_text">Loft Money</string>
    <string name="login">Войти</string>

    <string name="action_mode_item_delete">Удалить</string>

    <string name="dialog_delete">Вы действительно хотите удалить выбранный элемент?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    
    <string name="action_mode_title">Выделено:  </string>

    <string name="balance_balance_title">Доступные финансы </string>
    <string name="balance_income_title">Доход</string>
    <string name="balance_expense_title">Расход</string>

    <string name="count">%1$s \u20bd</string>
    <string name="balance_fragment_count">%1$d \u20bd</string>


</resources>
