<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddItemActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_marginStart_End32dp"
        android:layout_marginTop="@dimen/layout_marginTop100dp"
        android:layout_marginEnd="@dimen/layout_marginStart_End32dp"
        android:hint="@string/add_item_hint_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_marginStart_End32dp"
        android:layout_marginTop="@dimen/layout_marginTop16dp"
        android:layout_marginEnd="@dimen/layout_marginStart_End32dp"
        android:hint="@string/add_item_hint_price">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_24sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/layout_marginTop48dp"
        android:background="@null"
        android:drawableStart="@drawable/ic_chek"
        android:drawablePadding="@dimen/drawablePadding8dp"
        android:enabled="false"
        android:text="@string/add_item_button"
        android:textColor="@color/color_add_buttom"
        android:textSize="@dimen/text_size_18sp"
        app:icon="@drawable/ic_chek"
        app:iconTint="@color/color_add_buttom" />

</LinearLayout>