<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".BalanceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/layout_marginTop16dp"
        android:paddingTop="16dp"
        android:paddingEnd="@dimen/layout_marginTop16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/balance_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance_balance_title"
            android:textColor="@color/medium_grey"
            android:textSize="@dimen/textSize14sp" />

        <TextView
            android:id="@+id/balance_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/pale_orange"
            android:textSize="48sp"
            tools:text="640000" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white_six" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="@dimen/layout_marginTop16dp"
            android:paddingTop="16dp"
            android:paddingEnd="@dimen/layout_marginTop16dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/expense_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance_expense_title"
                android:textColor="@color/medium_grey"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/expense_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/dark_sky_blue"
                android:textSize="@dimen/text_size_24sp"
                tools:text="640000" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white_six" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="@dimen/layout_marginTop16dp"
            android:paddingTop="16dp"
            android:paddingEnd="@dimen/layout_marginTop16dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/income_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance_income_title"
                android:textColor="@color/medium_grey"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/income_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/income_color"
                android:textSize="@dimen/text_size_24sp"
                tools:text="640000" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white_six" />

    <FrameLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.loftblog.loftmoney.DiagramView
            android:id="@+id/diagram_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" />

    </FrameLayout>



</LinearLayout>